--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "deep-install": "npm i && cd server && npm i && cd ../client && npm i",
     "gameserv": "cd server && npm run build && npm start",
-    "webserv": "cd client && npm run build && cd .. && node lib/index.js"
+    "webserv": "cd client && npm run build && cd .. && node src/webserver.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,9 @@
   "homepage": "https://github.com/North-West-Wind/opensurviv#readme",
   "devDependencies": {
     "@types/mime-types": "^2.1.1",
+    "@types/msgpack-lite": "^0.1.8",
     "@types/node": "^18.15.5",
+    "msgpack-lite": "^0.1.26",
     "typescript": "^5.0.2"
   },
   "dependencies": {
