--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "description": "An open-source implementation of surviv.io (client)",
   "main": "index.html",
   "scripts": {
-    "build": "tsc && browserify tmp/game.js -o tmp/bundle.js && uglifyjs tmp/bundle.js -m -c -o scripts/bundle.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,12 +25,7 @@
     "@types/node": "^18.11.9",
     "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "browserify": "^17.0.0",
-    "eslint": "^8.28.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "typescript": "^4.7.2",
-    "uglify-js": "^3.17.4"
+    "@typescript-eslint/parser": "^5.46.1"
   },
   "dependencies": {
     "msgpack-lite": "^0.1.26",
