--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"ssl": true,
-	"keyFile": "~/Documents/ssl_certs/opensurviv.run.place.key",
-	"certFile": "~/Documents/ssl_certs/opensurviv.run.place.cer",
-	"hostName": "localhost",
-	"port": "80"
+	"keyFile": "../../ssl_certs/opensurviv.run.place.key",
+	"certFile": "../../ssl_certs/opensurviv.run.place.cer",
+	"hostName": "192.168.10.184",
+	"port": 443
 }
